<?xml version="1.0"?>
<package format="3">
  <name>hangman_interfaces</name>
  <version>0.0.0</version>
  <description>Hangman game interfaces</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <!-- 🔥 필수 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 🔥 인터페이스 생성 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 🔥 이거 없으면 interface 안 뜸 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 🚨 이거 추가 (핵심) -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
